5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1679_1101.log
== TEST (2019-04-25 16:21:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c= float(input("Insira o consumo de energia:"))
t= input("Insira o tipo de instalacao:").upper()

if (t=="R"):
	print("Entradas:", c "kWh e tipo" t)

-- ERROR:
File "XXXX", line 8
    print("Entradas:", c "kWh e tipo" t)
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:21:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c= float(input("Insira o consumo de energia:"))
t= input("Insira o tipo de instalacao:").upper()

if (t=="R"):
	print("Entradas:", c "kWh e tipo", t)

-- ERROR:
File "XXXX", line 8
    print("Entradas:", c "kWh e tipo", t)
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:22:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c= float(input("Insira o consumo de energia:"))
t= input("Insira o tipo de instalacao:").upper()

if (t=="R"):
	print("Entradas:",c "kWh e tipo", t)

-- ERROR:
File "XXXX", line 8
    print("Entradas:",c "kWh e tipo", t)
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:22:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c= float(input("Insira o consumo de energia:"))
t= input("Insira o tipo de instalacao:").upper()

if (t=="R"):
	print("Entradas:",c "kWh e tipo",t)

-- ERROR:
File "XXXX", line 8
    print("Entradas:",c "kWh e tipo",t)
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:22:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c= float(input("Insira o consumo de energia:"))
t= input("Insira o tipo de instalacao:").upper()

if (t=="R"):
	print("Entradas:",c,"kWh e tipo",t)

-- ERROR:
File "XXXX", line 8
    print("Entradas:",c "kWh e tipo",t)
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:24:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c= float(input("Insira o consumo de energia:"))
t= input("Insira o tipo de instalacao:").upper()

if (t=="R" and <= 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", c* 0.44 )

-- ERROR:
File "XXXX", line 7
    if (t=="R" and <= 500):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:24:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c= float(input("Insira o consumo de energia:"))
t= input("Insira o tipo de instalacao:").upper()

if (t=="R" and c<= 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", c* 0.44 )

-- ERROR:
File "XXXX", line 7
    if (t=="R" and <= 500):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:25:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c= float(input("Insira o consumo de energia:"))
t= input("Insira o tipo de instalacao:").upper()

if (t=="R" and c<= 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", c* 0.44 )

-- ERROR:
File "XXXX", line 7
    if (t=="R" and <= 500):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:26:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c= float(input("Insira o consumo de energia:"))
t= input("Insira o tipo de instalacao:").upper()

if (t=="R" and c>= 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", c* 0.44 )
elif (t=="R" and c< 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", c* 0.65 )
-- ERROR:
File "XXXX", line 7
    if (t=="R" and <= 500):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:31:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c= float(input("Insira o consumo de energia:"))
t= input("Insira o tipo de instalacao:").upper()

if (t=="R" and c<= 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", c* 0.44 )
elif (t=="R" and c> 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", c* 0.65 )
elif (t=="C" and c<= 1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", c* 0.55 )
elif (t=="C" and c > 1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", c* 0.60 )
elif (t=="I" and c<= 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", c* 0.55 )
elif (t=="I" and c > 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", c* 0.60 )

else:
	print("Entradas:",c,"kWh e tipo",t)
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.123803
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Insira o consumo de energia:Insira o tipo de instalacao:Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Insira o consumo de energia:Insira o tipo de instalacao:Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:31:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c= float(input("Insira o consumo de energia:"))
t= input("Insira o tipo de instalacao:").upper()

if (t=="R" and c<= 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", c* 0.44 )
elif (t=="R" and c> 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", c* 0.65 )
elif (t=="C" and c<= 1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", c* 0.55 )
elif (t=="C" and c > 1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", c* 0.60 )
elif (t=="I" and c<= 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", c* 0.55 )
elif (t=="I" and c > 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", c* 0.60 )

else:
	print("Entradas:",c,"kWh e tipo",t)
	print("Dados invalidos")
	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:32:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c= float(input("Insira o consumo de energia:"))
t= input("Insira o tipo de instalacao:").upper()

if (t=="R" and c<= 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", c* 0.44 )
elif (t=="R" and c> 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", c* 0.65 )
elif (t=="C" and c<= 1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", c* 0.55 )
elif (t=="C" and c > 1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", c* 0.60 )
elif (t=="I" and c<= 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", c* 0.55 )
elif (t=="I" and c > 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.60,2) )

else:
	print("Entradas:",c,"kWh e tipo",t)
	print("Dados invalidos")
	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:34:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c= float(input("Insira o consumo de energia:"))
t= input("Insira o tipo de instalacao:").upper()


if (t=="R" and c<= 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", c* 0.44 )
elif (t=="R" and c> 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", c* 0.65 )
elif (t=="C" and c<= 1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", c* 0.55 )
elif (t=="C" and c > 1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", c* 0.60 )
elif (t=="I" and c<= 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.55,2))
elif (t=="I" and c > 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.60,2))

else:
	print("Entradas:",c,"kWh e tipo",t)
	print("Dados invalidos")
	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:35:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c= float(input("Insira o consumo de energia:"))
t= input("Insira o tipo de instalacao:").upper()


if (t=="R" and c<= 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.44,2) )
elif (t=="R" and c> 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.65,2) )
elif (t=="C" and c<= 1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.55,2) )
elif (t=="C" and c > 1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.60) )
elif (t=="I" and c<= 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.55,2))
elif (t=="I" and c > 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.60,2))

else:
	print("Entradas:",c,"kWh e tipo",t)
	print("Dados invalidos")
	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:38:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c= float(input("Insira o consumo de energia:"))
t= input("Insira o tipo de instalacao:").upper()


if (t=="R" and c<= 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.44,2) )
elif (t=="R" and c> 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.65,2) )
elif (t=="C" and c<= 1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.55,2) )
elif (t=="C" and c>1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.60,2) )
elif (t=="I" and c<= 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.55,2))
elif (t=="I" and c> 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.60,2))

else:
	print("Entradas:",c,"kWh e tipo",t)
	print("Dados invalidos")
	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:38:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c= float(input("Insira o consumo de energia:"))
t= input("Insira o tipo de instalacao:").upper()


if (t=="R" and c<= 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.44,2) )
elif (t=="R" and c> 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.65,2) )
elif (t=="C" and c<= 1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.55,2) )
elif (t=="C" and c>1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.60,2) )
elif (t=="I" and c<= 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.55,2))
elif (t=="I" and c> 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.60,2))

else:
	print("Entradas:",c,"kWh e tipo",t)
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.112885
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:39:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c= float(input("Insira o consumo de energia:"))
t= input("Insira o tipo de instalacao:").upper()


if (t=="R" and c<= 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.44,2) )
elif (t=="R" and c> 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.65,2) )
elif (t=="C" and c<= 1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.55,2) )
elif (t=="C" and c>1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.60,2) )
elif (t=="I" and c<= 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.55,2))
elif (t=="I" and c> 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.60,2))

else:
	print("Entradas:",c,"kWh e tipo",t)
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.208695
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:39:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c= float(input("Insira o consumo de energia:"))
t= input("Insira o tipo de instalacao:").upper()


if (t=="R" and c<= 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.44,2) )
elif (t=="R" and c> 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.65,2) )
elif (t=="C" and c<= 1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.55,2) )
elif (t=="C" and c>1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.60,2) )
elif (t=="I" and c<= 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.55,2))
elif (t=="I" and c> 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.60,2))

else:
	print("Entradas:",c,"kWh e tipo",t)
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.192372
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:39:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c= float(input("Insira o consumo de energia:"))
t= input("Insira o tipo de instalacao:").upper()


if (t=="R" and c<= 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.44,2) )
elif (t=="R" and c> 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.65,2) )
elif (t=="C" and c<= 1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.55,2) )
elif (t=="C" and c>1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.60,2) )
elif (t=="I" and c<= 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.55,2))
elif (t=="I" and c> 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.60,2))

else:
	print("Entradas:",c,"kWh e tipo",t)
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.234498
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:39:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c= float(input("Insira o consumo de energia:"))
t= input("Insira o tipo de instalacao:").upper()


if (t=="R" and c<= 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.44,2) )
elif (t=="R" and c> 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.65,2) )
elif (t=="C" and c<= 1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.55,2) )
elif (t=="C" and c>1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.60,2) )
elif (t=="I" and c<= 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.55,2))
elif (t=="I" and c> 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.60,2))

else:
	print("Entradas:",c,"kWh e tipo",t)
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.254783
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:39:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c= float(input("Insira o consumo de energia:"))
t= input("Insira o tipo de instalacao:").upper()


if (t=="R" and c<= 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.44,2) )
elif (t=="R" and c> 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.65,2) )
elif (t=="C" and c<= 1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.55,2) )
elif (t=="C" and c>1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.60,2) )
elif (t=="I" and c<= 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.55,2))
elif (t=="I" and c> 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.60,2))

else:
	print("Entradas:",c,"kWh e tipo",t)
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.244196
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:39:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c= float(input("Insira o consumo de energia:"))
t= input("Insira o tipo de instalacao:").upper()


if (t=="R" and c<= 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.44,2) )
elif (t=="R" and c> 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.65,2) )
elif (t=="C" and c<= 1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.55,2) )
elif (t=="C" and c>1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.60,2) )
elif (t=="I" and c<= 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.55,2))
elif (t=="I" and c> 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.60,2))

else:
	print("Entradas:",c,"kWh e tipo",t)
	print("Dados invalidos")
	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:39:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c= float(input("Insira o consumo de energia:"))
t= input("Insira o tipo de instalacao:").upper()


if (t=="R" and c<= 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.44,2) )
elif (t=="R" and c> 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.65,2) )
elif (t=="C" and c<= 1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.55,2) )
elif (t=="C" and c>1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.60,2) )
elif (t=="I" and c<= 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.55,2))
elif (t=="I" and c> 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.60,2))

else:
	print("Entradas:",c,"kWh e tipo",t)
	print("Dados invalidos")
	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:40:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c= float(input("Insira o consumo de energia:"))
t= input("Insira o tipo de instalacao:").upper()


if (t=="R" and c<= 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.44,2) )
elif (t=="R" and c> 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.65,2) )
elif (t=="C" and c<= 1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.55,2) )
elif (t=="C" and c>1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.60,2) )
elif (t=="I" and c<= 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.55,2))
elif (t=="I" and c> 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.60,2))

else:
	print("Entradas:",c,"kWh e tipo",t)
	print("Dados invalidos")
	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:40:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c= float(input("Insira o consumo de energia:"))
t= input("Insira o tipo de instalacao:").upper()


if (t=="R" and c<= 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.44,2) )
elif (t=="R" and c> 500):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.65,2) )
elif (t=="C" and c<= 1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.55,2) )
elif (t=="C" and c>1000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.60,2) )
elif (t=="I" and c<= 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.55,2))
elif (t=="I" and c> 5000):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.60,2))

else:
	print("Entradas:",c,"kWh e tipo",t)
	print("Dados invalidos")
	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:41:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c= float(input("Insira o consumo de energia:"))
t= input("Insira o tipo de instalacao:").upper()


if (t=="R" and c<= 500 and c>0):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.44,2) )
elif (t=="R" and c> 500 and c>0):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.65,2) )
elif (t=="C" and c<= 1000 and c>0):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.55,2) )
elif (t=="C" and c>1000 and c>0):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.60,2) )
elif (t=="I" and c<= 5000 and c>0):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.55,2))
elif (t=="I" and c> 5000 and c>0):
	print("Entradas:",c,"kWh e tipo",t)
	print("Valor total: R$", round(c* 0.60,2))

else:
	print("Entradas:",c,"kWh e tipo",t)
	print("Dados invalidos")
	
-- EXECUTION TIME:
0.287371
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
